<resources>

    <!-- Preference Titles -->
    <string name="tdee_header">TDEE</string>
    <string name="log_header">Log</string>
    <string name="track_header">Track</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Settings -->
    <string name="time_title">Show time in entry</string>
    <string name="owl_title">Night owl mode</string>
    <string name="sum_title">Sum same day</string>
    <string name="callefttext">Calories:</string>

    <!-- App layout -->
    <string name="title_activity_setup">Setup</string>
    <string name="action_settings">Settings</string>
    <string name="calBtn">+</string>
    <string name="app_name">Calorie Center</string>
    <string name="calLog">Calorie Log</string>
    <string name="sexString">Sex</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="logodesc">logo</string>
    <string name="foodedittext">Food Name (Optional)</string>
    <string name="caledittext">Enter Calories</string>
    <string name="actLvlSelect">Select your current activity level</string>
    <string name="actLvlMain">Activity Level</string>
    <string name="completeMain">Complete!</string>
    <string name="completeInfo">You\'ve finished your setup! You can always come back and redo your setup later by going to settings.</string>
    <string name="completeStats">Stats:</string>
    <string name="completeFinishBtn">Finish</string>
    <string name="completeHelpBtn">View Help</string>
    <string name="mainSetupInfo">Welcome to calories tracker, please enter your information to calculate your TDEE periodically.</string>
    <string name="mainSetupHeader">Calorie Center Setup</string>
    <string name="ageString">Age</string>
    <string name="weightString">Weight</string>
    <string name="heightString">Height</string>
    <string name="bfString">Body Fat %</string>
    <string name="setupNextBtn">Next</string>
    <string name="helpInfo">Adding calories: \n\t Fill in the food name option if needed, and enter the calories in the box below and press enter. This will add your calories to the current day\'s log.\n\nRemoving calories:\n\t Press and hold the calories entry you\'d like to remove, and it will be removed from your current log.\n\nFinish logging:\n\t Press and hold the Kcal logo, this will log the current eaten calories for today and add it to the Track tab\'s graph.</string>
    <string name="helpHeader">Basic Use</string>

</resources>
