<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.setupFragment3">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/innerSetup3Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calSetupText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/completeMain"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/success" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/completeStats"
            android:textSize="24sp" />

<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="326dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/completeInfo"-->
<!--            android:textSize="24sp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/finishSetupBtn"
                android:layout_width="122dp"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/completeFinishBtn"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/helpBtn"
                android:layout_width="122dp"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:text="@string/completeHelpBtn"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>