<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.setupFragment2">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/innerSetup2Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calSetupText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/actLvlMain"
            android:textAlignment="center"
            android:background="@drawable/rounded_title"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/heart" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/actLvlSelect"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/activityLvlsCombo"
            android:layout_width="240dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/actInfo"
            android:layout_width="351dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/nextABtn"
            android:layout_width="265dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/setupNextBtn"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</FrameLayout>