<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag1Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".fragments.setupFragment1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/innerSetup1Layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="195dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="148dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/mainSetupInfo"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/calSetupText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/mainSetupHeader"
                    android:textAlignment="textStart"
                    android:background="@drawable/rounded_title"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.516"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                   />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifImageView2"
                    android:layout_width="127dp"
                    android:layout_height="77dp"
                    android:layout_marginTop="68dp"
                    android:src="@drawable/download"
                    app:layout_constraintEnd_toEndOf="@+id/calSetupText"
                    app:layout_constraintHorizontal_bias="0.427"
                    app:layout_constraintStart_toStartOf="@+id/calSetupText"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="3dp"
                    android:paddingTop="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/ageInput"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <RadioButton
                        android:id="@+id/maleRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        tools:layout_editor_absoluteX="119dp"
                        tools:layout_editor_absoluteY="206dp" />

                    <RadioButton
                        android:id="@+id/femaleRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"
                        tools:layout_editor_absoluteX="119dp"
                        tools:layout_editor_absoluteY="238dp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="31dp"
                    android:paddingLeft="10dp"
                    android:text="@string/sexString"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/ageInput"
                    app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <EditText
                    android:id="@+id/ageInput"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rounded_txt_view"
                    android:ems="10"
                    android:hint="Age"
                    android:inputType="number"
                    app:layout_constraintBottom_toTopOf="@+id/weightInput"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />


                <EditText
                    android:id="@+id/inchInput"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_txt_view"
                    android:ems="10"
                    android:hint="Inches"
                    android:inputType="number"
                    app:layout_constraintBottom_toTopOf="@+id/bodyfatInput"
                    app:layout_constraintEnd_toStartOf="@+id/ftInput"
                    app:layout_constraintStart_toStartOf="@+id/weightInput"
                    app:layout_constraintTop_toBottomOf="@+id/weightInput" />

                <EditText
                    android:id="@+id/ftInput"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded_txt_view"
                    android:ems="10"
                    android:hint="FT"
                    android:inputType="number"
                    android:nextFocusDown="@+id/inchInput"
                    app:layout_constraintBottom_toBottomOf="@+id/inchInput"
                    app:layout_constraintEnd_toEndOf="@+id/weightInput"
                    app:layout_constraintStart_toEndOf="@+id/inchInput"
                    app:layout_constraintTop_toTopOf="@+id/inchInput" />

                <EditText
                    android:id="@+id/bodyfatInput"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_txt_view"
                    android:ems="10"
                    android:hint="Body Fat %(Optional)"
                    android:inputType="number"
                    app:layout_constraintBottom_toTopOf="@+id/nextBtn1"
                    app:layout_constraintEnd_toEndOf="@+id/ftInput"
                    app:layout_constraintStart_toStartOf="@+id/inchInput"
                    app:layout_constraintTop_toBottomOf="@+id/inchInput" />

                <EditText
                    android:id="@+id/weightInput"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_txt_view"
                    android:ems="10"
                    android:hint="Weight"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="@+id/ageInput"
                    app:layout_constraintStart_toStartOf="@+id/ageInput"
                    app:layout_constraintTop_toBottomOf="@+id/ageInput" />

                <Button
                    android:id="@+id/nextBtn1"
                    android:layout_width="272dp"
                    android:layout_height="82dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/setupNextBtn"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.467"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bodyfatInput"
                    app:layout_constraintVertical_bias="1.0" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="72dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.93" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>